--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   <title>Mei-Ching Shih</title>
+   <title>Amy Shih</title>
    <link rel="icon" type="image/png" href="img/icon-03-01-01.png" />
    <link href="css/bootstrap2.css" rel="stylesheet">
    <!-- Custom CSS -->
