--- a/about.html
+++ b/about.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-
-
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,26 +9,25 @@
    <link rel="icon" type="image/png" href="img/icon-03-01-01.png" />
    <link href="css/bootstrap2.css" rel="stylesheet">
    <!-- Custom CSS -->
-   <link href="css/freelancer.css" rel="stylesheet">
+   <link href="css/main.css" rel="stylesheet">
    <link href="css/timeline.css" rel="stylesheet">
    <!-- Custom Fonts -->
    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
    <link href="http://fonts.googleapis.com/css?family=Open Sans:300,400" rel="stylesheet" type="text/css">
    
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+   <meta name="description" content="">
    <meta name="author" content="">
    
 
    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-
-
 </head>
+
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" >
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -39,28 +36,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-
                 </button>
-                <a class="navbar-brand" href="index.html">MEI-CHING SHIH</a>
+                <a class="navbar-brand" href="index.html">AMY SHIH</a>
             </div>
            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li >
+                    <li>
                         <a href="index.html">HOME</a>
                     </li>
-                    <li >
+                    <li>
                         <a href="work.html">PORTFOLIO</a>
                     </li>
                     <li>
                         <a href="event.html">EXPERIENCE</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="about.html">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 <header>
             <img class="img-responsive" src="img/cover_pic6.png" alt="" style="min-width:100%; height:auto; width:auto;">
    </header>
@@ -191,16 +188,16 @@
             <div class="col-md-12 col-lg-8">
                 <ul class="list-footer">
                  <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                    <a href="https://github.com/amyshih" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                 </li>
                 <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-pinterest"></i></a>
+                    <a href="https://www.pinterest.com/aenbiarshy182/" class="btn-social btn-outline"><i class="fa fa-fw fa-pinterest"></i></a>
                  </li>
                 <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/amyshih182" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                 </li>
                     <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                    <a href="mailto:hiimamy@umich.edu" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
                 </li>
                 </ul>
              </div>
@@ -212,7 +209,7 @@
         <div class="container">
             <div class="row">
                  <div class="col-lg-12">
-                 Copyright &copy; Mei-Ching Shih 2016
+                 Copyright &copy; Amy Shih 2016
                  </div>
             </div>
         </div>
