--- a/work.html
+++ b/work.html
@@ -7,11 +7,11 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   <title>Mei-Ching Shih</title>
+   <title>Amy Shih</title>
    <link rel="icon" type="image/png" href="img/icon-03-01-01.png" />
    <link href="css/bootstrap2.css" rel="stylesheet">
    <!-- Custom CSS -->
-   <link href="css/freelancer.css" rel="stylesheet">
+   <link href="css/main.css" rel="stylesheet">
    <!-- Custom Fonts -->
    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
    <link href="http://fonts.googleapis.com/css?family=Open Sans:300,400" rel="stylesheet" type="text/css">
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
 
                 </button>
-                <a class="navbar-brand" href="index.html">MEI-CHING SHIH</a>
+                <a class="navbar-brand" href="index.html">AMY SHIH</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -49,7 +49,7 @@
                     <li >
                         <a href="index.html">HOME</a>
                     </li>
-                    <li >
+                    <li class="active">
                         <a href="work.html">PORTFOLIO</a>
                     </li>
                     <li>
@@ -1203,16 +1203,16 @@
             <div class="col-md-12 col-lg-8">
                 <ul class="list-footer">
                  <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                    <a href="https://github.com/amyshih" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                 </li>
                 <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-pinterest"></i></a>
+                    <a href="https://www.pinterest.com/aenbiarshy182/" class="btn-social btn-outline"><i class="fa fa-fw fa-pinterest"></i></a>
                  </li>
                 <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/amyshih182" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                 </li>
                     <li>
-                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                    <a href="mailto:hiimamy@umich.edu" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
                 </li>
                 </ul>
              </div>
@@ -1224,7 +1224,7 @@
         <div class="container">
             <div class="row">
                  <div class="col-lg-12">
-                 Copyright &copy; Mei-Ching Shih 2016
+                 Copyright &copy; Amy Shih 2016
                  </div>
             </div>
         </div>
