--- a/about.html
+++ b/about.html
@@ -25,6 +25,14 @@
    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 </head>
 
+<header>
+    <div class="header-content">
+        <div class="header-content-inner">
+        </div>
+    </div>
+            <img class="img-responsive" src="img/cover_pic6.png" alt="" style="min-width:100%; height:auto; width:auto;">
+</header>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -58,9 +66,7 @@
         </div>
     </nav>
 
-<header>
-            <img class="img-responsive" src="img/cover_pic6.png" alt="" style="min-width:100%; height:auto; width:auto;">
-   </header>
+
 
 
 
