--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     The projects and thesis that I worked on
                                 </div>
                                 <div class="project-name">
-                                    Profolio
+                                    Portfolio
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                         <img src="img/home/right.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+                                <div class="project-category">
                                     More information about me
                                 </div>
                                 <div class="project-name">
