alt tags change

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="header-content-inner">
         </div>
     </div>
-            <img class="img-responsive" src="img/cover_pic6.png" alt="" style="min-width:100%; height:auto; width:auto;">
+            <img class="img-responsive" src="img/cover_pic6.png" alt="multidiscipline personality" style="min-width:100%; height:auto; width:auto;">
 </header>
 
 <body>
