--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
                     <a href="event.html" class="portfolio-box">
-                        <img src="img/home/left.jpg" class="img-responsive" alt="">
+                        <img src="img/home/left.jpg" class="img-responsive" alt="My past experience">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-12">
                     <a href="work.html" class="portfolio-box">
-                        <img src="img/home/middle.jpg" class="img-responsive" alt="">
+                        <img src="img/home/middle.jpg" class="img-responsive" alt="The projects I worked on">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-12">
                     <a href="about.html" class="portfolio-box">
-                        <img src="img/home/right.jpg" class="img-responsive" alt="">
+                        <img src="img/home/right.jpg" class="img-responsive" alt="Information about the creator">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category">
