--- a/event.html
+++ b/event.html
@@ -12,9 +12,10 @@
    <!-- Custom Fonts -->
    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
    <link href="http://fonts.googleapis.com/css?family=Open Sans:300,400" rel="stylesheet" type="text/css">
+   <link href="css/lightbox.min.css" rel="stylesheet">
    
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+   <meta name="description" content="">
    <meta name="author" content="">
    
 
@@ -84,7 +85,7 @@
 	              <!-- Wrapper for slides -->
 		            <div class="carousel-inner" role="listbox">
 		                <div class="item active" align="center">
-		                    <img src="img/activities/asus.jpg" alt="ASUS Sales Internship Program" style="max-height: 500px">
+		                    <a class="example-image-link" href="img/activities/asus.jpg" data-lightbox="example-set" data-title="ASUS Sales Internship Program"><img src="img/activities/asus.jpg" alt="ASUS Sales Internship Program" style="max-height: 500px"></a>
 		                    <div class="carousel-caption" align="center">
 		                        <p class="switch">ASUS Sales Internship Program</p>
 		                        <div class="center">2011-2012</div>
@@ -95,7 +96,7 @@
 		                </div>
 
 		                <div class="item" align="center">
-		                    <img src="img/activities/ttt.jpg" alt="Taiwan Tech Trek Internship Program" style="max-height: 500px">
+		                    <a class="example-image-link" href="img/activities/ttt.jpg" data-lightbox="example-set" data-title="Taiwan Tech Trek Internship Program"><img src="img/activities/ttt.jpg" alt="Taiwan Tech Trek Internship Program" style="max-height: 500px"></a>
 		                    <div class="carousel-caption" align="center" style="margin-left:10px;margin-right:10px;">
 		                        <p class="switch">Taiwan Tech Trek Internship Program</p>
 		                        <div class="center">2012 Summer</div>
@@ -106,7 +107,7 @@
 		                </div>
 
 		                <div class="item" align="center">
-		                    <img src="img/activities/IBM2.png" alt="IBM Blue Gene Internship Program" style="max-height: 500px;">
+		                    <a class="example-image-link" href="img/activities/IBM2.png" data-lightbox="example-set" data-title="IBM Blue Gene Internship Program"><img src="img/activities/IBM2.png" alt="IBM Blue Gene Internship Program" style="max-height: 500px;"></a>
 		                    <div class="carousel-caption" align="center" style="margin:0px; border-left:0px; border-right:0px;">
 		                        <p class="switch">IBM Blue Gene Internship Program</p>
 		                        <div class="center">2013 Summer</div>
@@ -117,7 +118,7 @@
 		                </div>
 
 		                <div class="item" align="center">
-		                    <img src="img/activities/wechat3.jpg" alt="WeChat Marketing Solution Competition" style="max-height: 500px;">
+		                    <a class="example-image-link" href="img/activities/wechat3.jpg" data-lightbox="example-set" data-title="WeChat Marketing Solution Competition"><img src="img/activities/wechat3.jpg" alt="WeChat Marketing Solution Competition" style="max-height: 500px;"></a>
 		                    <div class="carousel-caption" align="center">
 		                        <p class="switch">WeChat Marketing Solution Competition</p>
 		                        <div class="center">Role: Marketing CTO</div>
@@ -126,7 +127,7 @@
 		                </div>
 
 		                <div class="item" align="center">
-		                    <img src="img/activities/SF2.jpg" alt="One City, One Mission" style="max-height: 500px">
+		                    <a class="example-image-link" href="img/activities/SF2.jpg" data-lightbox="example-set" data-title="The Bay Area Design Thinking Exploreation Journey"><img src="img/activities/SF2.jpg" alt="One City, One Mission" style="max-height: 500px"></a>
 		                    <div class="carousel-caption" align="center" style="margin-left:10px;margin-right:10px">
 		                        <p class="switch">The Bay Area Design Thinking Exploreation Journey</p>
 		                        <div class="center">Role: Sponsored Traveler of the Silicon Valley in USA</div>
@@ -136,7 +137,7 @@
 		                </div>
 
 		                <div class="item" align="center">
-		                    <img src="img/activities/thesis1.jpg" alt="Thesis" style="max-height: 500px">
+		                    <a class="example-image-link" href="img/activities/thesis1.jpg" data-lightbox="example-set" data-title="In-depth Interview of Taiwan Travel Agencies"><img src="img/activities/thesis1.jpg" alt="Thesis" style="max-height: 500px"></a>
 		                    <div class="carousel-caption" align="center" style="margin-left:10px;margin-right:10px">
 		                        <p class="switch">In-depth Interview of Taiwan Travel Agencies</p>
 		                        <div class="center">Role: Thesis Author</div>
@@ -172,6 +173,9 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+
+		<!-- Lightbox -->
+        <script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 <!-- Footer -->
