--- a/event.html
+++ b/event.html
@@ -176,6 +176,14 @@
 
 		<!-- Lightbox -->
         <script src="js/lightbox-plus-jquery.min.js"></script>
+        <script>
+    		lightbox.option({
+    			'resizeDuration': 100,
+      			'wrapAround': true
+      			'imagefadeDuration': 100,
+    		})
+		</script>
+
 </body>
 
 <!-- Footer -->
