--- a/event.html
+++ b/event.html
@@ -178,9 +178,9 @@
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script>
     		lightbox.option({
-    			'resizeDuration': 100,
-      			'wrapAround': true
-      			'imagefadeDuration': 100,
+    			'resizeDuration': 300,
+      			'wrapAround': true,
+      			'imagefadeDuration': 500
     		})
 		</script>
 
